[package]

name = "midi"
version = "0.1.0"
authors = ["Sam Doshi <sam@metal-fish.co.uk>"]
license = "MIT"
description = "Common Midi types for Rust"
homepage = "https://github.com/samdoshi/midi-rs"
repository = "https://github.com/samdoshi/midi-rs"
documentation = "http://samdoshi.github.io/midi-rs/midi/index.html"
keywords = ["midi", "music", "audio"]

[dependencies]
num = "*"

